sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:12: error: type mismatch;
 found   : Unit
 required: ?{def x: ?}
Note that implicit conversions are not applicable because they are ambiguous:
 both method any2Ensuring in object Predef of type [A](x: A)Ensuring[A]
 and method any2ArrowAssoc in object Predef of type [A](x: A)ArrowAssoc[A]
 are possible conversion functions from Unit to ?{def x: ?}
	if(a>b){echange(n,n+1) x=true}
                       ^AlgBubbleSort3:12: error: value x is not a member of Unit
	if(a>b){echange(n,n+1) x=true}
                               ^